# MarvikAPI

./: .dev.env  .env  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
scripts/: prestart.sh
src/: create_tables.py  logger.py  main.py  settings.py
src/marvik_api/api/: api.py  dependencies.py  endpoints.py
src/marvik_api/db/: base_class.py  session.py
src/marvik_api/db/crud/: crud_base.py  crud_endpoint.py
src/marvik_api/db/models/: endpoint.py
src/marvik_api/schemas/: endpoint.py  timestamp.py
