[tool.poetry]
name = "MarvikAPI"
version = "0.1.0"
description = "api"
authors = ["fpaludi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61"
uvicorn = "^0.11"
SQLAlchemy = "^1.3"
dependency-injector = "^4.35"
psycopg2-binary = "^2.8"
python-dotenv = "^0.14"
structlog = "21.1.0"
colorama = "0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.10"
pre-commit = "^2.7"
black = "^19.10b0"

[tool.black]
line-length = 88
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
